# sudoku_solver

./: CMakeLists.txt  LICENSE  README.md
include/: binsudoku.h
src/: binsudoku.cpp  example.cpp
